lab1/Test/L1-A-6-50.output
Error Type B at Line 19
Error Type A at Line 46
Error Type A at Line 48
Error Type A at Line 56
Error Type B at Line 75
Error Type B at Line 77
Error Type A at Line 95
Error Type B at Line 99
