lab1/Test/L1-A-6-50.cmm
float HpFv0qZ6KR 
;
int ;
int HYGhu1I7yqKhA4nqfuZS ( ) {
  float DWmvf2nhIM5WB0k_48 [ 2100071589 ] [ 507705442 
    ] [ 1057530993 ] [ 1175588358 ] = - - ! vz0q05BBg 
    * - lxeM91MenvK7hku9qC / ! yUgrlSbIZIC / XZL ( ) / 
    - nOX9 - YIY2ahBMXzhJ6tP ( ) * izEtKDLWB * uuLOQ7FYKoip 
    / qiNa9n9so9_uRodD / Y_nwz3iMTv == - UyW * qgDcL1Lbvc 
    - gQYp >= hfL8sm ( ) [ hLRmB0c3ykHAJBECapf ] [ w6f2KWOTONxXsmLm5 
    ] [ C3UFrLHpS2m2DIi ] [ ZRi ] [ j ] / V1eagw6nMysmHqt 
    * KtFnnIqWnTm / toaBNpr6gsDhLjajG / b4ddKQD / h1dHdsT2Jxqql 
    * Q07FQMA2dHYsDz * N8O9A7Lmmlrm1qRxUZ != - kRbHIDiDjLdhi_R6 
    * rFN8HZJZAXnS_2TVCwOZ * G8sXi6H1E / kteoNsMoyudQb4LO 
    * Gf54jOVUKgi - MT1uT35 >= J6wzQYKfmJw ( ) * CcO5j3Rej 
    / Mbrd3s2v - McMpGlGZW < - RRZC7hq * LSa21N2d < ! 
    MM7Ep0hrs__1epiurDM * Nb49RbjfGk - MKWrP5OeCTJKqzq 
    + UJURjkzFdK - US + qfkzzIeHiK - Q9f && ! IC + IiMGvLG1y7 
    == gWKbB > EEDP && - b2Yo2nbaI_DBgYE * * ee / XFr9CYkvZD2 
    / o09o66KbsKaI * kvjh7u7Jn5dsIF6nY * E * wPEOPtNs1uJMf9v 
    / S2 / _XWDWdzS45Zt5uP * n8Si3rRbJc_9P / OaI * t0DPWUMohm8s883 
    / T5JJ / yKVlX9OMlIEA7rc * nUlNtg5mVZVlu5r - a + w_ 
    - hmgSKiNrY < aP8CedK6zsy9M5v4R == MJRWOOTmAb7SS < 
    dMuK != G6LXvYuRPt9e8XCei1 <= CAuNMoMgWamny >= ZbvASY 
    <= Fn >= sDz02M6 == GHRF9AKcqro49E <= zVCmhPqFST6 
    < GlIDWee_UmRTsQB != mxpfzfDCa == WKJMgSk2ah9TwrM 
    != thVpu2XrNqT3c0xf5zN2 > _tXiGcgbK791WogaHiI && ! 
    fK + FauZqrqteKsnC < OtZO5GKuSms == Nfq > ZBoP8vws4EX8q7Ce_w 
    > z66yGghaYDD84 <= ajTwMiHdZl && - djVe / NjWEU * 
    MRCcSB / pWMcZFC - CoE8ydai0nbq2MOdCfRL != Un4ARNAl0CQjKaoci_zd 
    == CtixhFiMz6eayjZf8kK && ! RFeLsnkNET9 / l2ZxXH6ZFODf 
    / OvtKzaHe * H + cPNnoW - v + o0Vt == GVa5vKkadR9 
    && ! atkqjNRGM / mwY * myzCNMrSGH9 + iDBxb + l5suj1NUAN5u_e 
    - RWBYznIJeF94IAgo < n0TBppMtNJc >= _19B_dBm <= qN 
    == ZAHngz7UMxm6 <= EHdWYJeKgqqadaySyM != mMQ2XQp && 
    - pD - u4_ > JAunayN0fhLBtGv || - x0P1_ * LC2UGVym74Gf26 
    - exbK5d0ZK + RcZYsQe2PSmJwk8Bs0i + mwDm1aLct3 + OaFx8s3rN9Ow4Q7Cfk 
    - iGWuGHynv - gna_GuvixW7eMICp - nYeUZ6s + A0twIOeB_S2NzN7oGd 
    < x5g9QFUb2Le < vuJj6cSvV5lOEYSVx && xOgqKimYgn1WzXwz 
    && FMagUGstQdMGIBTo && r6o8bg && AYn && MH_oQ || - 
    O6h2Rn16ZkiGoJ / vxdu - jy && t6ge4MXg9qMtnUfBP , 
    AvfqURxi [ 150791305 ] ;
  struct ZgXwto9GTo {
    int HEu_SfjZBOjy3 , ypCOoEq4Y ;
    float RujvGv9sir ;
  }qff \;
  if ( fn6S5g5IooRXYtxPlR ( ! h33v7NGTo2wRtDCw * ikpPiti 
    / 'EfXd1 / uMzNC + ttrV == uZ9q0D878fG && jhLEqbLaXUZGCS3n10dJ 
    && sZUV5zXj70SHQg6iwadG ) . wWdcy = 1280470494 * wgQeoKf 
    == YSi4PC8X9iO < owaX11P4 <= f5DOJeRE == LmfVI14f0_9bRd9ueiH 
    && sMsQMf ) {
  }
  return - ! - paXrHnSg1lwXjK973 * ! KMRGq68qp_wn4mW07pLh 
    * ! hGXkudHv_vhx * YfRsDcs3fae && - VtxdX - jOqaObyycAfTnYI4 
    < BRhz7H3D7mGEWX && ! L59YAXdcT * QR_bk3zKrAFIDvdHJtV5 
    / VY %/ mCzd5rc0IgqqqxAjfde + ydATmgk5VO599DVpknAn 
    + wqUCnf0f3w8vPG1 >= Zc <= ATC == NR7wz40H2BtIJxCDc 
    == Fg44QfaincN8dtM3G != up7aThdkV7HiaL > _a == ZXMngCi 
    <= _6xycfSR == _P8l53JsiEl == pJpuau0 <= cv <= SrVbgs7yzr636aE13 
    == ICh == mFSfN63tr0LKWu <= p_y1I8s == vx9ut7Uw9BKz_ 
    && ! eszyH / _O6aCdcSpAz7l6t_hV / WT2t * v * syTVWIvPmCXw 
    * B42e2r_eZ1Zh / sUtpEewBJy_N2RgkkDaF / wP7BY * NIp 
    / GXnVYh8EezeH3EsE / fMBATd0ir / FR9pb5oT7CLCFBYN2N 
    * UdhMACq * h9Ueq1Hc0vkE1rt * f9tzwzvO3Sdz1 * BkDX90jNIj 
    ;
  while ( ! Q1yxOSamzvky6xh8uH * sGFaiDa >= LOLSx99MnUd8 
    == UnPacgsBsib > YoqVEWTzlL < CuBl0MLRwYYz <= XqI87A27q61q 
    <= x_Vnhe6O4 > BU44c2g4aJ7o0NU >= A2MnJ < htKYu > 
    Sm4kEfqsPF == B8oK2SRjG8an <= Xg0MrA7nNb == Us2SBvXYM 
    <= Ww6md7BW0p16D <= OmM3kChxrzHM6H || zcZqf8WNUboT5Zf 
    || JqHa0no0s || rznDo || P2FTdkIJYpO )   bNTq ;

  if ( UZgT )   ASfoT8A ;
else   if ( e8BnP1 )   tyUJ ;
|| 

  if ( uBua1MLb3mM6B__42R )   if ( q )   xXcKlZp 351756516.1023974743 
    ;


}
struct {
}meskdsB ( ) {
  int v , e17dS_o = rdaBXP ;
  float BRB9 = 392579044 * oUPrjNmgZ2 / Uh2oGtMgcLfKouG 
    - Kzm4aLA857nT_ == EnV2dRmYADzLUb8K < RMBIawK < i1Rsw7 
    == hqMl >= c16yEioz7coCua8a06 > _S27w6_61BbcpLf <= 
    qdO8pbAgMn27_0_G == LK5Mh >= _ZwP83TE8dCgB != XUHroD22BmxC 
    <= x <= Lsx5T_mIgIfv8k > ES2sOBF7MO8w && uU3hzXupDEq_rwJrDf 
    && zbCao6Jpw ;
  return - - ! nP5m2R = ! rStlNopHLdAO = DnhoXamSNewr 
    ;
  - - ! W3 * - k87N4QP9FJQFz - wfB34ij ( ) [ HBQ8E 
    ] . tW5TehZ4S - ! iBn_UpI / ln7LB_Sd / hNQ_pIhxvm 
    - ! Xlz7Hv ~/ A0cO4tiXhVJBhian2h >= kXwxLKgXjBCpM3eUx6 
    ( ) . KvtWgrH - IC_hG + OWlMv > - qt0XPgV8VZLi6 - 
    HVT6 + qwrawPfMzi9P4SbzyM < - xETNjjspnftywu / P5ayfqVey 
    > rVxhSaqSDRfdYgltbq ;
  while ( lFDANgakI7f  )   HmkkKpj2UI__4kVpN9O ;

  if ( qixv7uEoBJb1uChQLI )   k ;
else   if ( gswiCYzAIpnoAha )   JZB ;


}
